--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Octopus Store</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
@@ -14,50 +15,54 @@
 <header>
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-            <img class="navbar-brand" src="./img/pulpostorelogo.svg">Offcanvas navbar</img>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
+            <img class="navbar-brand" src="./img/pulpostorelogo.svg"></img>
+            <button id="loggin" class="button">Ingreso</button>
+            <button class="navbar-toggler" id="verCarrito" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+              <img class="navbar-toggler-icon" src="/img/bag-shopping-solid.svg"></img>
             </button>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Mi Compra</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    
-                    <li class="nav-item dropdown">
-                        <label for="ordenador" class="nav-link " href="#" role="button" data-bs-toggle="dropdown" >Ordenar por</label>
-                        <select name="" id="ordenador" class="dropdown-menu">
-                            <option class="dropdown-item" value="MayorPrecio" selected>Mayor Precio</option>
-                            <option class="dropdown-item" value="MenorPrecio">Menor Precio</option>
-                                <hr class="dropdown-divider">
-                            <option class="dropdown-item" value="AZ">A - Z</option>
-                            <option class="dropdown-item" value="ZA">Z - A</option>
-                        </select> 
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>                
-                </ul>
-                <div id="contenedorCarrito" class="">
-                    <H3>Carrito</H3>
-                </div>
+            <div id="contenedorCarrito" class="offcanvas-body"></div>
+            <div>
+              <button class="button" id="vaciarCarrito">Vaciar Carrito</button>
+              <button class="button" id="comprarCarrito">Comprar</button>
+              
             </div>
-            </div>
-        </div>
-    </nav>
+          </div>
+        </nav>
 </header>
 
     <!--main-->
 <main>
-    <h1>Productos</h1>
-
+    <div class="Inicio">
+      <h1 class="tittle">Productos</h1>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Ordenar por
+        </button>
+        <ul class="dropdown-menu">
+          <li><button class="dropdown-item" type="button">Menor Precio</button></li>
+          <li><button class="dropdown-item" type="button">Mayor Precio</button></li>
+          <li><button class="dropdown-item" type="button">A - Z</button></li>
+          <li><button class="dropdown-item" type="button">Z - A</button></li>
+        </ul>
+      </div>
+    </div>
 
     <div id="contenedorProductos" class="container"></div>
 
+
 </main>
+<footer>
+  <img class="marca" src="./img/PulpoStoreMarca.svg" alt="Marca">
+   
+</footer>       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
-    <script src="main.js"></script>    
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/loggin.js"></script>
+    <script src="./js/main.js"></script>    
 </body>
 </html>
