--- a/index.html
+++ b/index.html
@@ -8,31 +8,36 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
     <!--Header-->
 <header>
     <nav class="navbar bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-            <img class="navbar-brand" src="./img/pulpostorelogo.svg"></img>
-            <button id="loggin" class="button">Ingreso</button>
-            <button class="navbar-toggler" id="verCarro" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-              <img class="navbar-toggler-icon" src="/img/bag-shopping-solid.svg"></img>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Mi Compra</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div id="contenedorCarro" class="offcanvas-body"></div>
-            <div>
-              <button class="button" id="vaciarCarro">Vaciar Carro</button>
-              <button class="button" id="comprarCarro">Comprar</button>
-              
-            </div>
+      <div class="container-fluid">
+        <img class="navbar-brand" src="./img/pulpostorelogo.svg"></img>
+        <button id="loggin" class="button">Ingreso</button>
+        <button class="navbar-toggler" id="verCarro" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+          <img class="navbar-toggler-icon" src="/img/bag-shopping-solid.svg"></img>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Mi Compra</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+
+<!--Carro de compras-->
+        <div id="contenedorCarro" class="offcanvas-body"></div>
+          <div>  
+            <h3 class="offcanvas-title">TOTAL: <span id="total"></span></h3>
+            <button class="button" id="vaciarCarro">Vaciar Carro</button>
+            <button class="button" id="comprarCarro" >Comprar</button>
           </div>
-        </nav>
+          <div id="metodoPago"></div>           
+        </div>
+      </div>
+    </nav>
 </header>
 
     <!--main-->
@@ -59,6 +64,7 @@
    
 </footer>       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/loggin.js"></script>
     <script src="./js/main.js"></script>    
