--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="Inicio">
       <h1 class="tittle">Productos</h1>
       <label for="orden">Ordenar Por:</label>
-        <select name="orden" id="orden">
+        <select onchange="ordenarProductos()" name="orden" id="orden">
             <option selected></option>
             <option value="menorPrecio">Menor Precio</option>
             <option value="mayorPrecio" >Mayor Precio</option>
